# vedic

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  pyrightconfig.json  vite.config.ts
.claude/: CLAUDE.md
backend/: pyproject.toml
backend/app/: __init__.py  auth.py  container.py  main.py  schemas.py  settings.py
backend/app/agents/: claude_runtime.py
backend/app/calculator/: __init__.py  ashtakavarga_pyjhora.py  dasha_pyjhora.py  divisional_pyjhora.py  engine.py  extras_pyjhora.py  formatter.py  shadbala_pyjhora.py  structured_schema.py  transit.py
backend/app/db/: __init__.py  engine.py  models.py
backend/app/runtime/: __init__.py  preflight.py
backend/app/services/: __init__.py  admin_sessions.py  chart_rectification.py  core_job_runtime.py  creem_billing.py  life_event_rectification.py  metadata_store.py  place_service.py  precise_place_lookup.py  report_exporter.py  skill_runtime.py  skill_workspace.py  user_store.py  vedic_calculator.py
backend/app/tools/: __init__.py  registry.py
backend/app/tools/bazi/: __init__.py  calculate_chart.py
backend/app/tools/rectifier/: __init__.py  time_scan.py
backend/app/tools/reporting/: __init__.py  (+1 more)
backend/app/utils/: ids.py
backend/tests/: test_admin_sessions.py  test_auth.py  test_bazi_calculator_tool.py  test_core_job_runtime.py  test_creem_billing.py  test_place_lookup_evidence.py  test_place_service.py  test_precise_place_lookup.py  test_vedic_input_sensitivity.py  test_vedic_reference_regression.py  test_workspace_boundaries.py
(+112 files in other folders)
