[project]
name = "vedic-backend"
version = "0.1.0"
description = "Python backend for the Vedic advisor product"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.2.87",
    "fastapi>=0.122.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.0.0",
    "reportlab>=5.0.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
vedic-backend = "app.main:start"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.0",
]
