[project]
name = "vedic-backend"
version = "0.1.0"
description = "Python backend for the Vedic advisor product"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.31.0",
    "claude-agent-sdk>=0.2.87",
    "fastapi>=0.122.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.34.0",
]

[project.scripts]
vedic-backend = "app.main:start"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F821", "F822", "F823"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=8.4.0",
    "ruff>=0.15.20",
]
